# openfhe-temp

./: .gitignore  CMakeLists.txt  Makefile  UnitTestCompareCryptoContext_8h_source.html  _formulas.tex  allbase_8h_source.html  allbfvrns_8h_source.html  allkey_8h_source.html  allrns_8h_source.html  allscheme_8h_source.html  annotated.html  apidoc_warning_logfile.txt  backenddyn_8h_source.html  backendfxd_8h_source.html  backendnat_8h_source.html  backendnathexl_8h_source.html  backendntl_8h_source.html  base-advancedshe_8h_source.html  base-cryptoparameters_8h_source.html  base-leveledshe_8h_source.html  base-multiparty_8h_source.html  base-parametergeneration_8h_source.html  base-pke_8h_source.html  base-pre_8h_source.html  base-scheme_8h_source.html  base-ser_8h_source.html  basicint_8h_source.html  bfv-ser_8h_source.html  bfv_8h_source.html  bfvrns-advancedshe_8h_source.html  bfvrns-cryptoparameters_8h_source.html  bfvrns-leveledshe_8h_source.html  bfvrns-multiparty_8h_source.html  bfvrns-parametergeneration_8h_source.html  bfvrns-pke_8h_source.html  bfvrns-pre_8h_source.html  bfvrns-scheme_8h_source.html  bfvrns-ser_8h_source.html  bfvrnsB-ser_8h_source.html  bfvrnsB_8h_source.html  (+1785 more)
.github/: README.md
.github/actions/default_builder/: action.yml
.github/workflows/: custom.yml  debug.yml  debugging.yml  main.yml  manual.yml  pull-request.yml  reuseable_workflow.yml
cicd/github-runner/: user-data.txt
doc/: CMakeLists.txt  Doxyfile.in  FindSphinx.cmake  conf.py
scripts/setup/: linux_platform_packages.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+49 more)
src/: .clang-format  README.md
src/binfhe/examples/: boolean-ap.cpp  boolean-serial-binary.cpp  boolean-serial-json.cpp  boolean.cpp
src/binfhe/include/: binfhecontext.h  fhew.h  lwe.h  lwecore.h  ringcore.h
src/binfhe/lib/: binfhecontext.cpp  fhew.cpp  lwe.cpp
src/binfhe/unittest/: UnitTestFHEW.cpp  UnitTestFHEWDeep.cpp  UnitTestFHEWSerial.cpp
src/core/examples/: parallel.cpp  sampling.cpp
src/core/extras/: dft.cpp  math.cpp  ntt1.cpp  ntt2.cpp  temp-ntt.cpp
src/core/include/: version.h
src/core/include/encoding/: ckkspackedencoding.h  coefpackedencoding.h  encodingparams.h  packedencoding.h  plaintext.h  plaintextfactory.h  stringencoding.h
src/core/include/lattice/: backend.h  dcrtpoly.h  dcrtpolyinterface.h  dgsampling.h  elemparamfactory.h  elemparams.h  field2n.h  hexldcrtpoly.h  ildcrtparams.h  ilelement.h  ilparams.h  poly.h  stdlatticeparms.h  trapdoor.h  trapdoorparameters.h
src/core/include/math/: backend.h  binaryuniformgenerator.h  dftransform.h  discretegaussiangenerator.h  discretegaussiangeneratorgeneric.h  discreteuniformgenerator.h  distributiongenerator.h  interface.h  matrix.h  matrixstrassen.h  nbtheory.h  ternaryuniformgenerator.h  transform.h
src/core/include/utils/: caller_info.h  debug.h  exception.h  hashutil.h  inttypes.h  memory.h  palisadebase64.h  parallel.h  parmfactory.h  serial.h  serializable.h  serialize-binary.h  serialize-json.h  sertype.h  testcasegen.h  utilities.h
src/core/lib/encoding/: ckkspackedencoding.cpp  coefpackedencoding.cpp  encodingparams.cpp  packedencoding.cpp  stringencoding.cpp
src/core/lib/lattice/: be2-poly-impl.cpp  be4-poly-impl.cpp  be6-poly-impl.cpp  benative-poly-impl.cpp  dcrtpoly-impl.cpp  dcrtpoly.cpp  dgsampling.cpp  elemparamfactory.cpp  elemparams.cpp  field2n.cpp  hexldcrtpoly.cpp  ildcrtparams.cpp  ilparams.cpp  matrix-lattice-impl.cpp  poly-impl.cpp  poly.cpp  stdlatticeparms.cpp  trapdoor-dcrtpoly-impl.cpp  trapdoor-poly-impl.cpp  trapdoor.cpp
src/core/unittest/: UnitTest128.cpp  UnitTestBinInt.cpp  UnitTestBinVect.cpp  UnitTestBlockAllocate.cpp  UnitTestCommonElements.cpp  UnitTestDCRTElements.cpp  UnitTestDistrGen.cpp  UnitTestEncoding.cpp  UnitTestException.cpp  UnitTestField2n.cpp  UnitTestLatticeParams.cpp  UnitTestMatrix.cpp  UnitTestMubintvec.cpp  UnitTestNTT.cpp  UnitTestNbTheory.cpp  UnitTestPolyElements.cpp  UnitTestSTLBlockAllocate.cpp  UnitTestSerialize.cpp  UnitTestTransform.cpp  UnitTestTrapdoor.cpp  UnitTestUtils.cpp  UnitTestXallocate.cpp
src/pke/examples/: advanced-real-numbers-128.cpp  advanced-real-numbers.cpp  depth-bfvrns-b.cpp  depth-bfvrns.cpp  depth-bgvrns.cpp  evalatindex.cpp  pke.cpp  polynomial_evaluation.cpp  pre-buffer.cpp  pre-text.cpp  pre.cpp  simple-integers-bgvrns.cpp  simple-integers-serial-bgvrns.cpp  simple-integers-serial.cpp  simple-integers.cpp  simple-real-numbers-serial.cpp  simple-real-numbers.cpp  threshold-fhe.cpp
src/pke/extras/: bfvrns.cpp  demo-depth-bfvrns-b.cpp  demo-depth-bfvrns.cpp  run-bfvrns-b.cpp  run-bfvrns.cpp
src/pke/include/: ciphertext-ser.h  ciphertext.h  config.h  cryptocontext-ser.h  cryptocontext.h  cryptocontextgen.h  cryptocontexthelper.h  metadata-ser.h  metadata.h  pubkeylp-ser.h  pubkeylp.h
src/pke/lib/: cryptocontext-impl.cpp  cryptocontext.cpp  cryptocontextfactory.cpp  cryptocontexthelper-impl.cpp  cryptocontextparametersets-impl.cpp
src/pke/unittest/: UnitTestAutomorphism.cpp  UnitTestBFVrnsCRTOperations.cpp  UnitTestBFVrnsDecrypt.cpp  UnitTestBGVrns.cpp  UnitTestBatching.cpp  UnitTestCKKS.cpp  UnitTestENCRYPT.cpp  UnitTestEvalInnerProduct.cpp  UnitTestEvalMult.cpp  UnitTestEvalMultMany.cpp  UnitTestEvalSum.cpp  UnitTestMultiparty.cpp  UnitTestPRE.cpp  UnitTestSHE.cpp  UnitTestSHEAdvanced.cpp  UnitTestSer.h  UnitTestSerializeBFV.cpp  UnitTestSerializeBFVrns.cpp  UnitTestSerializeBFVrnsB.cpp  UnitTestSerializeBGVrns.cpp  UnitTestSerializeCKKS.cpp  UnitTestSerializeNull.cpp  UnitTestUtils.h
tools/scripts/: apply-code-format.sh
(+84 files in other folders)
